@@ -14,9 +14,7 @@
 #define _BitInt _ExtInt
 #endif
 
-// Remaining part of bug: does not compile for width > 32.
-#if __SDCC_BITINT_MAXWIDTH >= {width} && 32 >= {width} // TODO: When we can regression-test in --std-c23 mode, use the standard macro from limits.h instead!
-
+#if __SDCC_BITINT_MAXWIDTH >= {width} && (32 >= {width} || !defined(__SDCC_pdk14)) // Lack of memory on pdk14 for wider types. Maybe some future optimization will help here.
 typedef {sign} _BitInt({width}) bitinttype;
 
 bitinttype from_float(float f)
@@ -27,7 +25,7 @@ bitinttype from_float(float f)
 
 void testCast (void)
 {
-#if __SDCC_BITINT_MAXWIDTH >= {width} && 32 >= {width} // TODO: When we can regression-test in --std-c23 mode, use the standard macro from limits.h instead!
+#if __SDCC_BITINT_MAXWIDTH >= {width} && (32 >= {width} || !defined(__SDCC_pdk14)) // Lack of memory on pdk14 for wider types. Maybe some future optimization will help here.
 	float f;
 
 	f = 1;
